--- a/css/material.css
+++ b/css/material.css
@@ -58,7 +58,7 @@ body {
 
 
 .section {
-  padding-top: 100px;
+  padding-top: 10px;
 }
 
 
@@ -93,6 +93,7 @@ body {
 .ss-compo-wrapper {
   position: relative;
 
+
 }
 
 .ss-compo-wrapper h2 {
@@ -121,4 +122,35 @@ body {
   object-fit: contain;
   object-position: center;
 
+}
+
+
+.main-contain {
+    padding: 0;
+    margin-top: 10px;
+    position: relative;
+    background-color: #e9eef061;
+    padding: 20px !important;
+}
+
+.intro-material {
+    position: relative;
+    text-align: justify;
+}
+
+.intro-material h1 {
+    font-size: 26px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.img-mat {
+    width: 100%;
+    height: 400px;
+    position: relative;
+}
+.img-mat img {
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
